--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -42,6 +42,7 @@
     color: inherit;
     font-weight: 600;
     padding: 0.35rem 0 0.65rem 0;
+    margin-bottom: 0;
 }
 
 .navTo-group>div {
